Fix git titles overflows

--- a/src/assets/scss/components/git.scss
+++ b/src/assets/scss/components/git.scss
@@ -40,7 +40,7 @@
         padding-right: 10px;
         overflow: hidden;
 
-        span {
+        span, b {
             width: 100%;
             text-overflow: ellipsis;
             overflow: hidden;
